--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -290,9 +290,29 @@ certains \noeuds reliés par une arête.
 
 \subsection{Heuristiques de placement}
 
-% dfs / bfs déséquilibre
+Pour parcourir un graphe, on a  deux grands classiques, dans ce
+domaine, envisageables que sont les parcours en largeur et en
+profondeur, respectivement ci-après Bfs et Dfs. Nous avons implanté les deux, ce qui a permis de voir les
+conséquences d'un tel choix. En observant les deux figures suivantes, il est
+clairement visible que le choix entre les deux n'est pas évident.
+Le Dfs semble moins croiser les arêtes. Le Bfs équilibre bien mieux la
+représentation du graphe.
+Pour choisir un parcours par défaut, nous avons préféré nous appuyer
+sur quelque chose de sur plutot qu'une chose possible. En effet, dans
+ce cas, le Dfs croise moins les arêtes, mais qu'en serait-il dans
+d'autres; alors que dans tous les cas, le Bfs équilibrera mieux le
+graphe.
+Le choix s'est donc objectivement porté sur le parcours Bfs qui
+permet de voir plus de \noeuds d'un seul coup.
 
-% ordonnancement des successeurs -> moins d'arêtes qui se croisent
+Pour palier les défauts de placement engendrés par le Bfs, on a décidé
+d'ordonnancer les successeurs d'un \noeud de manière à se faire
+croiser le moins d'arêtes possible. L'idée de cet ordonnancement est
+basé sur le fait que les successeurs ayant le moins d'arêtes ``extérieures''
+posent le moins de problèmes. Donc, ordonner la liste des
+successeurs d'un \noeud reviens à mettre en tête de liste
+les \noeuds ayant le plus petit degré, et ainsi de suite jusqu'au
+\noeud ayant le plus grand degré. 
 
 \section{Réalisation dans \ocamlgraph}
 
