--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -121,11 +121,11 @@ droites sont représentées par des arcs portés par des cercles
 perpendiculaires à $C$ comme illustré par la droite $D_3$ ci-après, sur la figure de
 droite.  
 \begin{center}
-image de la lentille 
+% image de la lentille 
 % \includegraphics[scale=0.25]{lentille.eps}   
 \end{center}
 \begin{center}
-  \includegraphics[scale=0.25]{perpendiculaire.eps}  
+  \includegraphics[scale=0.35]{perpendiculaire.eps}  
 \end{center}
 
 On peut noter que les droites $D_2$ et $D_3$ sont parallèles à $D_1$, mais,
