--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -87,24 +87,26 @@ la géométrie euclidienne sont conservés, tels que :
 \item  une droite est le chemin le plus court reliant deux points ;
 \item  deux droites sont parallèles si elles ne s'intersectent pas.
 \end{itemize}
-Cette géométrie dite hyperbolique est donc
-basée sur le fait qu'en un point $M$, il peut passer une infinité de
-droites parallèles à la droite $D$. Ainsi exprimé, ce concept peut
-paraître difficile à imaginer, mais plusieurs modèles permettant de se
-représenter la géométrie hyperbolique ont été développé depuis sa
-découverte. En prenant le schéma suivant, relativement simple, basé
-sur un de ces modèles, on pourra mieux se représenter le fait d'avoir
+Cette géométrie dite hyperbolique est donc basée sur le fait qu'en un
+point $M$, il peut passer une infinité de droites parallèles à la
+droite $D$. Ainsi exprimé, ce concept peut paraître difficile à
+imaginer, mais plusieurs modèles permettant de se représenter la
+géométrie hyperbolique ont été développé depuis sa découverte. En
+prenant la figure \ref{fig:parallels}, relativement simple, basé sur
+un de ces modèles, on pourra mieux se représenter le fait d'avoir
 plusieurs parallèles passant par un même point. En effet, on peut voir
-que les trois droites $d_1$, $d_2$ et $d_3$ passent par $M$ et sont parallèles à
-$D$ (et non parallèles entre elles car elles se croisent en $M$). Précisons
-que dans cette géométrie, les droites nous apparaissent courbes, mais
-ce sont bien des droites au sens où elles représentent le plus court
-chemin entre deux points.
+que les trois droites $d_1$, $d_2$ et $d_3$ passent par $M$ et sont
+parallèles à $D$ (et non parallèles entre elles car elles se croisent
+en $M$). Précisons que dans cette géométrie, les droites nous
+apparaissent courbes, mais ce sont bien des droites au sens où elles
+représentent le plus court chemin entre deux points.
 
-\begin{center}
-\includegraphics[scale=0.50]{parallels.eps}
-\end{center}
- 
+\begin{figure}
+  \centering
+ \includegraphics[scale=0.50]{parallels.eps}
+  \caption{Théorême des parallèles en géométrie hyperbolique}
+  \label{fig:parallels}
+\end{figure}
 Henri Poincaré a imaginé un modèle pour la géométrie hyperbolique que
 l'on appelle le disque de Poincaré. Ce modèle est composé d'un cercle $C$,
 dénomé horizon, et d'un ensemble de point se trouvant à l'intérieur
@@ -120,14 +122,19 @@ la normal $N$ au plan hyperbolique où $D$ à traversé la lentille. Les
 droites sont représentées par des arcs portés par des cercles
 perpendiculaires à $C$ comme illustré par la droite $D_3$ ci-après, sur la figure de
 droite.  
-\begin{center}
-% image de la lentille 
-% \includegraphics[scale=0.25]{lentille.eps}   
-\end{center}
-\begin{center}
-  \includegraphics[scale=0.35]{perpendiculaire.eps}  
-\end{center}
 
+\begin{figure}
+  \centering
+ % \includegraphics[scale=0.25]{lentille.eps}   
+  \caption{Représentation de passage entre le plan euclidien et le plan hyperbolique}
+  \label{fig:lentille}
+\end{figure}
+\begin{figure}
+  \centering
+   \includegraphics[scale=0.35]{perpendiculaire.eps}  
+  \caption{Représentation de quelques éléments dans un disque de Poincaré}
+  \label{fig:cercles}
+\end{figure}
 On peut noter que les droites $D_2$ et $D_3$ sont parallèles à $D_1$, mais,
 étant donné qu'elles se coupent, $D_2$ et $D_3$ ne sont pas parallèles entre
 elles. Remarquons aussi que la droite $D_1$ est portée par un cercle
