--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -114,30 +114,41 @@ l'on appelle le disque de Poincaré. Ce modèle est composé d'un cercle $C$,
 dénomé horizon, et d'un ensemble de point se trouvant à l'intérieur
 strict de ce cercle. Les points de l'horizon sont dits idéaux pour le modèle.
 Pour essayer de faciliter la compréhension de ce modèle, on peut se
-pencher sur la \figl{lentille} ci-après qui représente le plan euclidien sur
+pencher sur la \figl{passage} ci-après qui représente le plan euclidien sur
 lequel on a déposé une lentille plan convexe convergente (semblable à
 un bol transparent rempli d'eau), et dont la surface plane est notre
 disque de Poincaré.
 \begin{figure}
   \centering
-  \includegraphics[scale=0.25]{images/lentille2.eps}   
-  \caption{Représentation de passage entre le plan euclidien et le plan hyperbolique}
-  \label{fig:lentille}
+   \begin{minipage}{0.49\linewidth}
+      \includegraphics[scale=0.25]{images/lentille1.eps}   
+  \label{fig:lentille1}
+  \end{minipage}
+  \begin{minipage}{0.49\linewidth}
+      \includegraphics[scale=0.25]{images/lentille2.eps}   
+  \label{fig:lentille2}
+  \end{minipage}
+ \caption{Représentation de passage entre le plan euclidien et le plan
+   hyperbolique}
+ \label{fig:passage}
 \end{figure}
 
- On peut voir \figs{cercles} que pour représenter un
+ On peut voir \figs{lentille1} que pour représenter un
 point sur ce plan, on trace une droite $D$ entre le centre du
 disque unité et le point dans le plan euclidien, et ensuite on prend
-la normal $N$ au plan hyperbolique où $D$ à traversé la lentille. Les
-droites sont représentées par des arcs portés par des cercles
-perpendiculaires à $C$ comme illustré par la droite $D_3$ ci-après \figs{cercles}.  
+la normal $N$ au plan hyperbolique où $D$ à traversé la lentille. 
+La \figl{lentille2} représente grossièrement le passage d'un dessin du
+plan euclidien au dessin sur le disque de Poincaré.
+
+Les droites sont représentées par des arcs portés par des cercles
+perpendiculaires à $C$ comme illustré par la droite $D_3$ ci-après
+\figs{cercles}.
 \begin{figure}[!b]
   \centering
    \includegraphics[scale=0.35]{images/perpendiculaire.eps}  
   \caption{Représentation de quelques éléments dans un disque de Poincaré}
   \label{fig:cercles}
 \end{figure}
-
 On peut noter que les droites $D_2$ et $D_3$ sont parallèles à $D_1$, mais,
 étant donné qu'elles se coupent, $D_2$ et $D_3$ ne sont pas parallèles entre
 elles. Remarquons aussi que la droite $D_1$ est portée par un cercle
