--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -145,7 +145,7 @@ perpendiculaires à $C$ comme illustré par la droite $D_3$ ci-après
 \figs{cercles}.
 \begin{figure}[!b]
   \centering
-   \includegraphics[scale=0.35]{images/perpendiculaire.eps}  
+   \includegraphics[scale=0.31]{images/perpendiculaire.eps}  
   \caption{Représentation de quelques éléments dans un disque de Poincaré}
   \label{fig:cercles}
 \end{figure}
@@ -174,9 +174,9 @@ chaque pas qu'il fait dans la direction de l'horizon (le bord du
 disque pour l'observateur), la distance par unité de pas qu'il
 parcourt paraît de plus en plus petite pour l'observateur. Ainsi le
 bord du disque est inatteignable pour ce petit être vivant sur le plan
-de Poincaré.\\
+de Poincaré.
 
-
+\vspace\
 C'est en utilisant ce point de vue que nous avons réalisé le traçage
 des segments de droites dans le plan hyperbolique, en implantant une
 tortue LOGO se déplaçant sur ce plan.
@@ -219,12 +219,13 @@ dans \cite{miquel}. Les fonctions de déplacement et de rotations
 \texttt{val turn\_right : turtle -> float -> turtle = <fun>}
 \end{itemize}
 
+\vspace\
 On peut voir \figs{parcours} le parcours de différentes tortues se
 déplaçant sur le plan de Poincaré. On peut observer, entre deux pas de
 temps identiques, la différence de distance parcourue qui apparaît à
 l'observateur.
 
-\begin{figure}[h]
+\begin{figure}
   \centering
   \begin{minipage}{0.49\linewidth}
     \includegraphics[scale=0.27]{images/parcours.eps}  
@@ -235,8 +236,7 @@ l'observateur.
     \includegraphics[scale=0.50]{images/dictateurs.eps}
     \caption{Le paradoxe des $n$ dictateurs}
     \label{fig:dictateurs}
-    %\vspace*{-1.5em}
-  \end{minipage}
+    \end{minipage}
 \end{figure}
 Nous avons maintenant un moyen de tracer facilement des droites sur le
 plan hyperbolique, et nous pouvons nous intéresser au dessin d'un
@@ -311,21 +311,20 @@ rapport à un arbre :
 \end{itemize}
 
 Pour le choix de la racine, le choix est reporté sur la librairie
-\ocamlgraph\ sous la forme d'une fonction donnant un n\oe ud
-arbitraire.
-À partir de cette racine, on procède comme pour l'affichage d'un
-arbre, c'est-à-dire qu'on affecte à chacun de ses successeurs
-immédiats un demi-plan puis, récursivement, on procède à l'affichage
-des descendants de chacun de ses successeurs.
-Mais il y a cependant deux différences importantes.
-En effet, il peut y avoir plusieurs chemins différents menant de
-la racine à un \noeud\ donné. Dès lors, un \noeud\ peut déjà avoir été
-affiché comme successeur immédiat d'un descendant de la racine déjà
-traité, et ne doit donc plus \^etre considéré comme successeur de tout
-autre \noeud. Cependant, les ar\^etes correspondantes doivent \^etre
-affichées, ce qui amène à ajouter des ar\^etes transversales par
-rapport au dessin d'un arbre, c'est-à-dire des ar\^etes
-s'affranchissant des frontières entre demi-plans.
+\ocamlgraph\ sous la forme d'une fonction donnant un \noeud\
+arbitraire.  À partir de cette racine, on procède comme pour
+l'affichage d'un arbre, c'est-à-dire qu'on affecte à chacun de ses
+successeurs immédiats un demi-plan puis, récursivement, on procède à
+l'affichage des descendants de chacun de ses successeurs.  Mais il y a
+cependant deux différences importantes.  En effet, il peut y avoir
+plusieurs chemins différents menant de la racine à un \noeud\ donné.
+Dès lors, un \noeud\ peut déjà avoir été affiché comme successeur
+immédiat d'un descendant de la racine déjà traité, et ne doit donc
+plus être considéré comme successeur de tout autre \noeud\.
+Cependant, les arêtes correspondantes doivent être affichées, ce
+qui amène à ajouter des arêtes transversales par rapport au dessin
+d'un arbre, c'est-à-dire des arêtes s'affranchissant des frontières
+entre demi-plans.
 
 Ces deux dissemblances peuvent avoir des conséquences importantes pour
 l'affichage d'un graphe, ce qui implique de considérer avec soin les
@@ -341,47 +340,75 @@ heuristiques concernant ces deux points.
 Pour parcourir un graphe, on a principalement deux choix : le parcours
 en profondeur (DFS) et le parcours en largeur (BFS). Nous avons
 implanté les deux, ce qui a permis de voir les conséquences d'un tel
-choix. En observant les deux figures suivantes, il est clairement
-visible que le choix entre les deux n'est pas évident.  Le Dfs semble
-moins croiser les arêtes. Le Bfs équilibre bien mieux la
-représentation du graphe.  Pour choisir un parcours par défaut, nous
-avons préféré nous appuyer sur quelque chose de s\^ur plut\^ot qu'une
-chose possible. En effet, dans ce cas, le Dfs croise moins les arêtes,
-mais qu'en serait-il dans d'autres cas ; alors que dans tous les cas, le
-Bfs équilibrera mieux le graphe.  Le choix s'est donc objectivement
-porté sur le parcours Bfs qui permet de voir plus de \noeuds\ d'un seul
-coup.
+choix. En observant les deux figures suivantes (fig. \ref{fig:dfs},
+\ref{fig:bfs}), on se doute que le choix entre les deux ne va pas être
+évident.
 
-voir la figure~\ref{fig:dfs}
+ Au premier coup d'oeil, le Dfs semble moins croiser
+les arêtes et le Bfs paraît mieux équilibrer la représentation du
+graphe. En effet, sur la \figl{dfs-dfs}, on voit une tendance à regrouper les
+\noeuds\ et éviter trop de croisement d'arêtes, contrairement à la
+\figl{dfs-bfs} qui a tendance, elle, a se faire croiser une grande
+quantité d'arêtes. Mais à la décharge de Bfs, il permet d'afficher
+plus de noeud que Dfs (respectivement 16 contre 11, pour la
+\figl{dfs}), ce qui implique l'affichage de plus d'arêtes et donc un
+risque plus grand que certainesse croisent. 
 
 \begin{figure}
-\begin{center}
- \includegraphics[scale=0.30]{images/db4_dfs.eps}  \quad
- \includegraphics[scale=0.30]{images/db4_bfs.eps}  
-\end{center}
+  \centering
+  \begin{minipage}{0.49\linewidth}
+    \includegraphics[scale=0.30]{images/db4_dfs.eps} 
+    \label{fig:dfs-dfs}
+  \end{minipage}
+  \begin{minipage}{0.49\linewidth}
+    \includegraphics[scale=0.30]{images/db4_bfs.eps}
+    \label{fig:dfs-bfs}
+  \end{minipage}
   \caption{Intérêt d'un parcours en profondeur}
   \label{fig:dfs}
 \end{figure}
 
+Pour la \figl{bfs}, la différence du nombre de \noeuds\ affichés est
+moins flagrante, mais reste plus grande pour Bfs (16 contre 14 pour
+Dfs). La \figl{bfs-dfs} montre par contre bien que le Dfs compresse
+tout le graphe dans un coin du plan, alors que le Bfs \figs{bfs-bfs}
+utilise pleinement le plan hyperbolique, sans pour autant trop croiser les
+arêtes.
+
+
 \begin{figure}
-\begin{center}
- \includegraphics[scale=0.30]{images/parcours_dfs.eps}  \quad
- \includegraphics[scale=0.30]{images/parcours_bfs.eps}  
-\end{center}
-  \caption{Intér\^et d'un parcours en largeur}
+  \centering
+  \begin{minipage}{0.49\linewidth}
+    \includegraphics[scale=0.30]{images/parcours_dfs.eps} 
+    \label{fig:bfs-dfs}
+  \end{minipage}
+  \begin{minipage}{0.49\linewidth}
+    \includegraphics[scale=0.30]{images/parcours_bfs.eps}
+    \label{fig:bfs-bfs}
+  \end{minipage}
+  \caption{Intérêt d'un parcours en largeur}
   \label{fig:bfs}
 \end{figure}
 
+Pour choisir un parcours par défaut, nous avons préféré nous appuyer
+sur le fait que le but était tout de même de visualiser le plus de
+\noeuds\ possibles, et aussi d'utiliser le maximum du plan
+hyperbolique. Le choix s'est donc objectivement porté sur le parcours
+Bfs.
+
+\vspace\
 Pour palier les défauts de placement engendrés par le Bfs, on a décidé
 d'ordonnancer les successeurs d'un \noeud\ de manière à se faire
-croiser le moins d'arêtes possible. L'idée de cet ordonnancement est
-basé sur le fait que les successeurs ayant le moins d'arêtes ``extérieures''
-posent le moins de problèmes. Donc, ordonner la liste des
-successeurs d'un \noeud\ revient à mettre en tête de liste
-les \noeuds\ ayant le plus petit degré, et ainsi de suite jusqu'au
-\noeud\ ayant le plus grand degré. 
-
-% TODO : parler des composantes
+croiser le moins d'arêtes possible. Pour ce faire, on commence tout
+d'abord à faire la liste de tous les successeurs d'un noeud. De cette
+liste, on construit des listes des composantes fortement
+connexes. Ainsi, nous avons toutes les composantes qui sont séparées,
+ce qui nous permet de choisir l'ordre d'affichage de ces composantes.
+Pour ordonner ces sous listes, on prend pour chaque composante le
+\noeud\ de degré minimal et on effectue à partir de lui un parcours en
+profondeur. Les listes résultantes de l'ensemble des composantes est
+ensuite concaténé pour nous rendre la liste ordonnée des successeur du
+\noeud\ étudié.
 
 \section{Réalisation dans \ocamlgraph}
 
