--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -106,12 +106,12 @@ représentent le plus court chemin entre deux points.
 \begin{figure}
   \centering
  \includegraphics[scale=0.50]{images/parallels.eps}
-  \caption{Théorême des parallèles en géométrie hyperbolique}
+  \caption{Théorème des parallèles en géométrie hyperbolique}
   \label{fig:parallels}
 \end{figure}
 Henri Poincaré a imaginé un modèle pour la géométrie hyperbolique que
 l'on appelle le disque de Poincaré. Ce modèle est composé d'un cercle $C$,
-dénomé horizon, et d'un ensemble de point se trouvant à l'intérieur
+dénommé horizon, et d'un ensemble de point se trouvant à l'intérieur
 strict de ce cercle. Les points de l'horizon sont dits idéaux pour le modèle.
 Pour essayer de faciliter la compréhension de ce modèle, on peut se
 pencher sur la \figl{passage} ci-après qui représente le plan euclidien sur
@@ -352,7 +352,7 @@ graphe. En effet, sur la \figl{dfs-dfs}, on voit une tendance à regrouper les
 quantité d'arêtes. Mais à la décharge de Bfs, il permet d'afficher
 plus de noeud que Dfs (respectivement 16 contre 11, pour la
 \figl{dfs}), ce qui implique l'affichage de plus d'arêtes et donc un
-risque plus grand que certainesse croisent. 
+risque plus grand que certaines se croisent. 
 
 \begin{figure}
   \centering
