--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -176,7 +176,8 @@ parcourt paraît de plus en plus petite pour l'observateur. Ainsi le
 bord du disque est inatteignable pour ce petit être vivant sur le plan
 de Poincaré.
 
-\vspace\
+\medskip
+
 C'est en utilisant ce point de vue que nous avons réalisé le traçage
 des segments de droites dans le plan hyperbolique, en implantant une
 tortue LOGO se déplaçant sur ce plan.
@@ -219,7 +220,8 @@ dans \cite{miquel}. Les fonctions de déplacement et de rotations
 \texttt{val turn\_right : turtle -> float -> turtle = <fun>}
 \end{itemize}
 
-\vspace\
+\medskip
+
 On peut voir \figs{parcours} le parcours de différentes tortues se
 déplaçant sur le plan de Poincaré. On peut observer, entre deux pas de
 temps identiques, la différence de distance parcourue qui apparaît à
@@ -396,7 +398,8 @@ sur le fait que le but était tout de même de visualiser le plus de
 hyperbolique. Le choix s'est donc objectivement porté sur le parcours
 Bfs.
 
-\vspace\
+\medskip
+
 Pour palier les défauts de placement engendrés par le Bfs, on a décidé
 d'ordonnancer les successeurs d'un \noeud\ de manière à se faire
 croiser le moins d'arêtes possible. Pour ce faire, on commence tout
